cmake_minimum_required(VERSION 3.16)
project(source)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(include)
include_directories(include/cmd)
include_directories(include/hv)
include_directories(tools/Client)
include_directories(tools/Server)
include_directories(vendor/cmd)
include_directories(vendor/libhv)
include_directories(vendor/libhv/base)
include_directories(vendor/libhv/cpputil)
include_directories(vendor/libhv/event)
include_directories(vendor/libhv/evpp)
include_directories(vendor/libhv/examples/consul)
include_directories(vendor/libhv/examples/httpd)
include_directories(vendor/libhv/examples/nmap)
include_directories(vendor/libhv/http)
include_directories(vendor/libhv/http/client)
include_directories(vendor/libhv/http/server)
include_directories(vendor/libhv/include)
include_directories(vendor/libhv/include/hv)
include_directories(vendor/libhv/misc)
include_directories(vendor/libhv/protocol)
include_directories(vendor/libhv/util)

add_executable(source
        include/cmd/buffer.h
        include/cmd/checksum.h
        include/cmd/command.h
        include/cmd/config.h
        include/cmd/distribute.h
        include/cmd/filter.h
        include/cmd/getopt.h
        include/cmd/hash.h
        include/cmd/keychain.h
        include/cmd/linklist.h
        include/cmd/log.h
        include/cmd/md5-gnu.h
        include/cmd/memory.h
        include/cmd/network.h
        include/cmd/pqueue.h
        include/cmd/prefix.h
        include/cmd/regex-gnu.h
        include/cmd/routemap.h
        include/cmd/smux.h
        include/cmd/sockopt.h
        include/cmd/sockunion.h
        include/cmd/str.h
        include/cmd/stream.h
        include/cmd/table.h
        include/cmd/thread.h
        include/cmd/vector.h
        include/cmd/version.h
        include/cmd/vty.h
        include/cmd/zebra.h
        include/hv/base64.h
        include/hv/Buffer.h
        include/hv/Callback.h
        include/hv/Channel.h
        include/hv/Event.h
        include/hv/EventLoop.h
        include/hv/EventLoopThread.h
        include/hv/EventLoopThreadPool.h
        include/hv/grpcdef.h
        include/hv/hatomic.h
        include/hv/hbase.h
        include/hv/hbuf.h
        include/hv/hconfig.h
        include/hv/hdef.h
        include/hv/hdir.h
        include/hv/hendian.h
        include/hv/herr.h
        include/hv/hexport.h
        include/hv/hfile.h
        include/hv/hlog.h
        include/hv/hloop.h
        include/hv/hmain.h
        include/hv/hmap.h
        include/hv/hmath.h
        include/hv/hmutex.h
        include/hv/hobjectpool.h
        include/hv/hplatform.h
        include/hv/hproc.h
        include/hv/hscope.h
        include/hv/hsocket.h
        include/hv/hssl.h
        include/hv/hstring.h
        include/hv/hsysinfo.h
        include/hv/hthread.h
        include/hv/hthreadpool.h
        include/hv/htime.h
        include/hv/http2def.h
        include/hv/http_client.h
        include/hv/http_content.h
        include/hv/httpdef.h
        include/hv/HttpMessage.h
        include/hv/HttpParser.h
        include/hv/HttpResponseWriter.h
        include/hv/HttpServer.h
        include/hv/HttpService.h
        include/hv/hurl.h
        include/hv/hv.h
        include/hv/hversion.h
        include/hv/icmp.h
        include/hv/ifconfig.h
        include/hv/iniparser.h
        include/hv/json.hpp
        include/hv/md5.h
        include/hv/netinet.h
        include/hv/nlog.h
        include/hv/requests.h
        include/hv/sha1.h
        include/hv/singleton.h
        include/hv/Status.h
        include/hv/TcpClient.h
        include/hv/TcpServer.h
        include/hv/ThreadLocalStorage.h
        include/hv/UdpClient.h
        include/hv/UdpServer.h
        include/hv/WebSocketChannel.h
        include/hv/WebSocketClient.h
        include/hv/WebSocketParser.h
        include/hv/WebSocketServer.h
        include/hv/wsdef.h
        include/ping.h
        tools/Client/icmp.c
        tools/Client/icmp.h
        tools/Client/main.c
        tools/Client/order.h
        tools/Client/ping.h
        tools/Client/TcpClient.cpp
        tools/Server/cat.h
        tools/Server/main.c
        tools/Server/order.cpp
        tools/Server/order.h
        tools/Server/touch.cpp
        tools/Server/touch.h
        tools/Server/vim.h
        unittest/cat_test.cpp
        unittest/icmp.c
        unittest/ping_test.cpp
        unittest/touch_test.cpp
        vendor/cmd/buffer.c
        vendor/cmd/buffer.h
        vendor/cmd/checksum.c
        vendor/cmd/checksum.h
        vendor/cmd/cmd_main.c
        vendor/cmd/command.c
        vendor/cmd/command.h
        vendor/cmd/config.h
        vendor/cmd/daemon.c
        vendor/cmd/distribute.c
        vendor/cmd/distribute.h
        vendor/cmd/filter.c
        vendor/cmd/filter.h
        vendor/cmd/getopt.c
        vendor/cmd/getopt.h
        vendor/cmd/getopt1.c
        vendor/cmd/hash.c
        vendor/cmd/hash.h
        vendor/cmd/keychain.c
        vendor/cmd/keychain.h
        vendor/cmd/linklist.c
        vendor/cmd/linklist.h
        vendor/cmd/log.c
        vendor/cmd/log.h
        vendor/cmd/md5-gnu.h
        vendor/cmd/md5.c
        vendor/cmd/memory.c
        vendor/cmd/memory.h
        vendor/cmd/network.c
        vendor/cmd/network.h
        vendor/cmd/pid_output.c
        vendor/cmd/pqueue.c
        vendor/cmd/pqueue.h
        vendor/cmd/prefix.c
        vendor/cmd/prefix.h
        vendor/cmd/print_version.c
        vendor/cmd/regex-gnu.h
        vendor/cmd/regex.c
        vendor/cmd/routemap.c
        vendor/cmd/routemap.h
        vendor/cmd/smux.c
        vendor/cmd/smux.h
        vendor/cmd/sockopt.c
        vendor/cmd/sockopt.h
        vendor/cmd/sockunion.c
        vendor/cmd/sockunion.h
        vendor/cmd/str.c
        vendor/cmd/str.h
        vendor/cmd/stream.c
        vendor/cmd/stream.h
        vendor/cmd/table.c
        vendor/cmd/table.h
        vendor/cmd/thread.c
        vendor/cmd/thread.h
        vendor/cmd/vector.c
        vendor/cmd/vector.h
        vendor/cmd/version.c
        vendor/cmd/version.h
        vendor/cmd/vty.c
        vendor/cmd/vty.h
        vendor/cmd/zebra.h
        vendor/libhv/base/array.h
        vendor/libhv/base/hatomic.h
        vendor/libhv/base/hbase.c
        vendor/libhv/base/hbase.h
        vendor/libhv/base/hbuf.h
        vendor/libhv/base/hdef.h
        vendor/libhv/base/heap.h
        vendor/libhv/base/hendian.h
        vendor/libhv/base/herr.c
        vendor/libhv/base/herr.h
        vendor/libhv/base/hlog.c
        vendor/libhv/base/hlog.h
        vendor/libhv/base/hmath.h
        vendor/libhv/base/hmutex.h
        vendor/libhv/base/hplatform.h
        vendor/libhv/base/hproc.h
        vendor/libhv/base/hsocket.c
        vendor/libhv/base/hsocket.h
        vendor/libhv/base/hssl.c
        vendor/libhv/base/hssl.h
        vendor/libhv/base/hsysinfo.h
        vendor/libhv/base/hthread.h
        vendor/libhv/base/htime.c
        vendor/libhv/base/htime.h
        vendor/libhv/base/hversion.c
        vendor/libhv/base/hversion.h
        vendor/libhv/base/list.h
        vendor/libhv/base/netinet.h
        vendor/libhv/base/queue.h
        vendor/libhv/cpputil/hdir.cpp
        vendor/libhv/cpputil/hdir.h
        vendor/libhv/cpputil/hfile.h
        vendor/libhv/cpputil/hmain.cpp
        vendor/libhv/cpputil/hmain.h
        vendor/libhv/cpputil/hmap.h
        vendor/libhv/cpputil/hobjectpool.h
        vendor/libhv/cpputil/hscope.h
        vendor/libhv/cpputil/hstring.cpp
        vendor/libhv/cpputil/hstring.h
        vendor/libhv/cpputil/hthreadpool.h
        vendor/libhv/cpputil/hurl.cpp
        vendor/libhv/cpputil/hurl.h
        vendor/libhv/cpputil/ifconfig.cpp
        vendor/libhv/cpputil/ifconfig.h
        vendor/libhv/cpputil/iniparser.cpp
        vendor/libhv/cpputil/iniparser.h
        vendor/libhv/cpputil/json.hpp
        vendor/libhv/cpputil/RAII.cpp
        vendor/libhv/cpputil/singleton.h
        vendor/libhv/cpputil/ThreadLocalStorage.cpp
        vendor/libhv/cpputil/ThreadLocalStorage.h
        vendor/libhv/echo-servers/asio_echo.cpp
        vendor/libhv/echo-servers/libev_echo.c
        vendor/libhv/echo-servers/libevent_echo.c
        vendor/libhv/echo-servers/libhv_echo.c
        vendor/libhv/echo-servers/libuv_echo.c
        vendor/libhv/echo-servers/muduo_echo.cpp
        vendor/libhv/echo-servers/pingpong_client.cpp
        vendor/libhv/echo-servers/poco_echo.cpp
        vendor/libhv/event/epoll.c
        vendor/libhv/event/evport.c
        vendor/libhv/event/hevent.c
        vendor/libhv/event/hevent.h
        vendor/libhv/event/hloop.c
        vendor/libhv/event/hloop.h
        vendor/libhv/event/iocp.c
        vendor/libhv/event/iowatcher.h
        vendor/libhv/event/kqueue.c
        vendor/libhv/event/nio.c
        vendor/libhv/event/nlog.c
        vendor/libhv/event/nlog.h
        vendor/libhv/event/noevent.c
        vendor/libhv/event/overlapio.c
        vendor/libhv/event/overlapio.h
        vendor/libhv/event/poll.c
        vendor/libhv/event/select.c
        vendor/libhv/evpp/Buffer.h
        vendor/libhv/evpp/Callback.h
        vendor/libhv/evpp/Channel.h
        vendor/libhv/evpp/Event.h
        vendor/libhv/evpp/EventLoop.h
        vendor/libhv/evpp/EventLoop_test.cpp
        vendor/libhv/evpp/EventLoopThread.h
        vendor/libhv/evpp/EventLoopThread_test.cpp
        vendor/libhv/evpp/EventLoopThreadPool.h
        vendor/libhv/evpp/EventLoopThreadPool_test.cpp
        vendor/libhv/evpp/Status.h
        vendor/libhv/evpp/TcpClient.h
        vendor/libhv/evpp/TcpClient_test.cpp
        vendor/libhv/evpp/TcpServer.h
        vendor/libhv/evpp/TcpServer_test.cpp
        vendor/libhv/evpp/UdpClient.h
        vendor/libhv/evpp/UdpClient_test.cpp
        vendor/libhv/evpp/UdpServer.h
        vendor/libhv/evpp/UdpServer_test.cpp
        vendor/libhv/examples/consul/consul.cpp
        vendor/libhv/examples/consul/consul.h
        vendor/libhv/examples/consul/main.cpp
        vendor/libhv/examples/httpd/handler.h
        vendor/libhv/examples/httpd/httpd.cpp
        vendor/libhv/examples/httpd/router.h
        vendor/libhv/examples/nmap/main.cpp
        vendor/libhv/examples/nmap/nmap.cpp
        vendor/libhv/examples/nmap/nmap.h
        vendor/libhv/examples/curl.cpp
        vendor/libhv/examples/hloop_test.c
        vendor/libhv/examples/hmain_test.cpp
        vendor/libhv/examples/htimer_test.c
        vendor/libhv/examples/http_client_test.cpp
        vendor/libhv/examples/http_server_test.cpp
        vendor/libhv/examples/nc.c
        vendor/libhv/examples/tcp_chat_server.c
        vendor/libhv/examples/tcp_echo_server.c
        vendor/libhv/examples/tcp_proxy_server.c
        vendor/libhv/examples/udp_echo_server.c
        vendor/libhv/examples/udp_proxy_server.c
        vendor/libhv/examples/websocket_client_test.cpp
        vendor/libhv/examples/websocket_server_test.cpp
        vendor/libhv/examples/wget.cpp
        vendor/libhv/http/client/AsyncHttpClient.cpp
        vendor/libhv/http/client/AsyncHttpClient.h
        vendor/libhv/http/client/http_client.cpp
        vendor/libhv/http/client/http_client.h
        vendor/libhv/http/client/requests.h
        vendor/libhv/http/client/WebSocketClient.cpp
        vendor/libhv/http/client/WebSocketClient.h
        vendor/libhv/http/server/FileCache.cpp
        vendor/libhv/http/server/FileCache.h
        vendor/libhv/http/server/http_page.cpp
        vendor/libhv/http/server/http_page.h
        vendor/libhv/http/server/HttpHandler.cpp
        vendor/libhv/http/server/HttpHandler.h
        vendor/libhv/http/server/HttpResponseWriter.h
        vendor/libhv/http/server/HttpServer.cpp
        vendor/libhv/http/server/HttpServer.h
        vendor/libhv/http/server/HttpService.cpp
        vendor/libhv/http/server/HttpService.h
        vendor/libhv/http/server/WebSocketServer.h
        vendor/libhv/http/grpcdef.h
        vendor/libhv/http/Http1Parser.cpp
        vendor/libhv/http/Http1Parser.h
        vendor/libhv/http/http2def.h
        vendor/libhv/http/Http2Parser.cpp
        vendor/libhv/http/Http2Parser.h
        vendor/libhv/http/http_content.cpp
        vendor/libhv/http/http_content.h
        vendor/libhv/http/http_parser.c
        vendor/libhv/http/http_parser.h
        vendor/libhv/http/httpdef.c
        vendor/libhv/http/httpdef.h
        vendor/libhv/http/HttpMessage.cpp
        vendor/libhv/http/HttpMessage.h
        vendor/libhv/http/HttpParser.cpp
        vendor/libhv/http/HttpParser.h
        vendor/libhv/http/multipart_parser.c
        vendor/libhv/http/multipart_parser.h
        vendor/libhv/http/websocket_parser.c
        vendor/libhv/http/websocket_parser.h
        vendor/libhv/http/WebSocketChannel.h
        vendor/libhv/http/WebSocketParser.cpp
        vendor/libhv/http/WebSocketParser.h
        vendor/libhv/http/wsdef.c
        vendor/libhv/http/wsdef.h
        vendor/libhv/include/hv/base64.h
        vendor/libhv/include/hv/Buffer.h
        vendor/libhv/include/hv/Callback.h
        vendor/libhv/include/hv/Channel.h
        vendor/libhv/include/hv/Event.h
        vendor/libhv/include/hv/EventLoop.h
        vendor/libhv/include/hv/EventLoopThread.h
        vendor/libhv/include/hv/EventLoopThreadPool.h
        vendor/libhv/include/hv/grpcdef.h
        vendor/libhv/include/hv/hatomic.h
        vendor/libhv/include/hv/hbase.h
        vendor/libhv/include/hv/hbuf.h
        vendor/libhv/include/hv/hconfig.h
        vendor/libhv/include/hv/hdef.h
        vendor/libhv/include/hv/hdir.h
        vendor/libhv/include/hv/hendian.h
        vendor/libhv/include/hv/herr.h
        vendor/libhv/include/hv/hexport.h
        vendor/libhv/include/hv/hfile.h
        vendor/libhv/include/hv/hlog.h
        vendor/libhv/include/hv/hloop.h
        vendor/libhv/include/hv/hmain.h
        vendor/libhv/include/hv/hmap.h
        vendor/libhv/include/hv/hmath.h
        vendor/libhv/include/hv/hmutex.h
        vendor/libhv/include/hv/hobjectpool.h
        vendor/libhv/include/hv/hplatform.h
        vendor/libhv/include/hv/hproc.h
        vendor/libhv/include/hv/hscope.h
        vendor/libhv/include/hv/hsocket.h
        vendor/libhv/include/hv/hssl.h
        vendor/libhv/include/hv/hstring.h
        vendor/libhv/include/hv/hsysinfo.h
        vendor/libhv/include/hv/hthread.h
        vendor/libhv/include/hv/hthreadpool.h
        vendor/libhv/include/hv/htime.h
        vendor/libhv/include/hv/http2def.h
        vendor/libhv/include/hv/http_client.h
        vendor/libhv/include/hv/http_content.h
        vendor/libhv/include/hv/httpdef.h
        vendor/libhv/include/hv/HttpMessage.h
        vendor/libhv/include/hv/HttpParser.h
        vendor/libhv/include/hv/HttpResponseWriter.h
        vendor/libhv/include/hv/HttpServer.h
        vendor/libhv/include/hv/HttpService.h
        vendor/libhv/include/hv/hurl.h
        vendor/libhv/include/hv/hv.h
        vendor/libhv/include/hv/hversion.h
        vendor/libhv/include/hv/ifconfig.h
        vendor/libhv/include/hv/iniparser.h
        vendor/libhv/include/hv/json.hpp
        vendor/libhv/include/hv/md5.h
        vendor/libhv/include/hv/nlog.h
        vendor/libhv/include/hv/requests.h
        vendor/libhv/include/hv/sha1.h
        vendor/libhv/include/hv/singleton.h
        vendor/libhv/include/hv/Status.h
        vendor/libhv/include/hv/TcpClient.h
        vendor/libhv/include/hv/TcpServer.h
        vendor/libhv/include/hv/ThreadLocalStorage.h
        vendor/libhv/include/hv/UdpClient.h
        vendor/libhv/include/hv/UdpServer.h
        vendor/libhv/include/hv/WebSocketChannel.h
        vendor/libhv/include/hv/WebSocketClient.h
        vendor/libhv/include/hv/WebSocketParser.h
        vendor/libhv/include/hv/WebSocketServer.h
        vendor/libhv/include/hv/wsdef.h
        vendor/libhv/misc/grpc_server.h
        vendor/libhv/misc/win32_getopt.h
        vendor/libhv/protocol/dns.c
        vendor/libhv/protocol/dns.h
        vendor/libhv/protocol/ftp.c
        vendor/libhv/protocol/ftp.h
        vendor/libhv/protocol/icmp.c
        vendor/libhv/protocol/icmp.h
        vendor/libhv/protocol/smtp.c
        vendor/libhv/protocol/smtp.h
        vendor/libhv/tmp/check.c
        vendor/libhv/unittest/connect_test.c
        vendor/libhv/unittest/date_test.c
        vendor/libhv/unittest/defer_test.cpp
        vendor/libhv/unittest/ftp_test.c
        vendor/libhv/unittest/hatomic_test.c
        vendor/libhv/unittest/hatomic_test.cpp
        vendor/libhv/unittest/hmutex_test.c
        vendor/libhv/unittest/hstring_test.cpp
        vendor/libhv/unittest/hthread_test.cpp
        vendor/libhv/unittest/ifconfig_test.cpp
        vendor/libhv/unittest/listdir_test.cpp
        vendor/libhv/unittest/md5_test.c
        vendor/libhv/unittest/mkdir_test.c
        vendor/libhv/unittest/nslookup_test.c
        vendor/libhv/unittest/objectpool_test.cpp
        vendor/libhv/unittest/ping_test.c
        vendor/libhv/unittest/rmdir_test.c
        vendor/libhv/unittest/sendmail_test.c
        vendor/libhv/unittest/sha1_test.c
        vendor/libhv/unittest/socketpair_test.c
        vendor/libhv/unittest/synchronized_test.cpp
        vendor/libhv/unittest/threadpool_test.cpp
        vendor/libhv/unittest/webbench.c
        vendor/libhv/util/base64.c
        vendor/libhv/util/base64.h
        vendor/libhv/util/md5.c
        vendor/libhv/util/md5.h
        vendor/libhv/util/sha1.c
        vendor/libhv/util/sha1.h
        vendor/libhv/hconfig.h
        vendor/libhv/hexport.h
        vendor/libhv/hv.h
        iniconfopt.cpp
        iniconfopt.h)
